# agentic-survey-research-team

./: .env.template  COMMITS.md  README.md  REPO_STRUC.md  agents.py  chat.py  config.py  cost_optimization.db  cost_optimizer.py  cost_tracker.py  cost_tracking.db  error.txt  main.py  pyproject.toml  requirements.txt  test.ipynb  test_cost_optimization.py  test_cost_tracking.py  tracked_llm.py
docs/: API.md  DEVELOPER.md  USER_GUIDE.md
frontend/: web_app.py
frontend/templates/: base.html  index.html
