[project]
name = "age-ntic-survey-research-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.157.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
